# zut-ipz

./: .gitattributes  README.md  docker-compose.yaml
core/: README.md
ipz-core/: .env  Cargo.toml
ipz-core/src/: config.rs  main.rs
parser/: README.md  match_report.schema.json  requirements.txt
parser/soccermatches/: matchreport.py  pdf_chyronhego.py  pdf_chyronhego.test.py  pdf_chyronhego_test.py  pdf_parse.py
web/: README.md
