[package]
name = "ipz-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
mongodb = "2.7"
bson = { version = "2.7", features = ["chrono"]}
chrono = { version = "0.4"}
tokio = { version = "1.34", features = ["full"] }
tracing = { version = "0.1" }
tower = { version = "0.4", features = [] }
hyper = { version = "1", features = [] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
axum = { version = "0.7", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
dotenvy = "0.15"
clap = { version = "4.4", features = ["env", "derive", "unicode", "string"] }
log = { version = "0.4"}
